<resources>
   <string name="app_name">Cyclopath</string>
   <string name="save">Save</string>
   <string name="discard">Discard</string>
   <string name="yes">Yes</string>
   <string name="no">No</string>
   <string name="status_no_location">A location can currently not be
    determined. Enable more location sources (see Security and Location
    Settings) and make sure the sky is visible. Try again later.</string>
   <string name="location_provider_required_title">
    Enable a Location Provider</string>
   <string name="location_provider_required_message">A location provider is
    required in order to use this feature. Open location settings to enable
    GPS or Network?</string>
   <string name="gps_default_title">GPS Required</string>
   <string name="gps_required_default">GPS is required to use this
    feature.</string>
   <string name="gps_required_for_recording">GPS is required for recording a
    track. To start recording, press \"Go To Settings\" to open your location
    preferences and enable GPS.</string>
   <string name="gps_disabled_while_recording_message">GPS is required to
    continue recording the current track. Please save your track or press
    \"Go To Settings\" to open your location preferences and enable
    GPS.</string>
   <string name="location_services_cancel_btn">Cancel</string>
   <string name="location_services_save_btn">Save Track</string>
   <string name="location_services_enable_btn">Go To Settings</string>
   <string name="cannot_retrieve_tile">Cannot retrieve map tile</string>
   <string name="warning_too_far">You are currently outside Cyclopath\'s map
    boundaries. Some features may be unavailable.</string>
   <string name="my_location">My Location</string>
   <string name="find_route">Find Route</string>
   <string name="start">Record Track</string>
   <string name="stop">Stop</string>
   <string name="aerial_tiles">Aerial Tiles</string>
   <string name="aerial_off">Off</string>
   <string name="login">Log In</string>
   <string name="logout">Log Out</string>
   <string name="clear_map">Clear Map</string>
   <string name="manage_tracks">Manage Tracks</string>
   <string name="route_library">Route Library</string>
   <string name="about">About</string>
   <string name="landmarks_exp">Help Us Test</string>
   <string name="track_context_menu_header">Track Menu</string>
   <string name="view_track_details">View Details</string>
   <string name="edit_track_details">Edit Details</string>
   <string name="delete_track">Delete Track</string>
   <string name="show_track">Show Track</string>
   <string name="add_track_to_account">Add Track to Account</string>
   <string name="context_menu_title">Select item&#8230;</string>
   <string name="tracks">Track</string>
   <string name="routes">Route</string>
   <string name="show_route">Show Route</string>
   <string name="show_directions">Show Directions</string>
   <string name="share_route">Share Route</string>
   <string name="menu">Menu</string>
   <string name="save_track_gpx">Export as GPX</string>
   <string name="conflate_track">Conflate Track</string>
   <string name="login_username">Username</string>
   <string name="login_password">Password</string>
   <string name="login_remember_lbl">Remember me</string>
   <string name="login_btn">Log in</string>
   <string name="logged_in_title">Cyclopath - Logged in as</string>
   <string name="logged_in_toast">You are now logged in as</string>
   <string name="logged_out_title">Cyclopath - Not logged in</string>
   <string name="logged_out_toast">You are now logged out.</string>
   <string name="login_username_not_validated">
      Username cannot be empty.</string>
   <string name="login_password_not_validated">
      Password cannot be empty.</string>
   <string name="sign_up">Sign Up</string>
   <string name="forgot_password">Forgot your password?</string>
   <string name="dont_have_account">Don\'t have an account?\t</string>
   <string name="error">Error</string>
   <string name="gwis_error_present">\n\nThe URL that failed was: </string>
   <string name="gwis_io_error">Cyclopath is having difficulty communicating
    with the Cyclopath servers. Check your network connections.\n\nIf this
    problem persists and other websites work OK, please contact us so we can
    look into the problem."</string>
   <string name="gwis_server_maintenance">Server is down for
    maintenance.</string>
   <string name="gwis_bad_response">Bad response from server:\n\n</string>
   <string name="gwis_semi_protection">Semi-protection note</string>
   <string name="gwis_semi_protection_part_a">Cyclopath is in semi-protection
    mode. Currently, anonymous users and accounts younger than </string>
   <string name="gwis_semi_protection_part_b"> hours cannot save public changes.
    All logged-in users can still save private changes such as
    ratings.</string>
   <string name="gwis_timeout">The response from the server timed out. Please
    check your network connections.\n\nIf this problem persists and other
    websites work OK, please contact us so we can look into the
    problem.</string>
   <string name="gwis_timeout_title">Timeout waiting for response.</string>
   <string name="gwis_hello_login_fail">Login failed</string>
   <string name="gwis_preference_put_fail">Unable to save
    preferences:\n\n</string>
   <string name="gwis_new_track_save_later">Track saving failed. The track was
    saved on the device temporarily and will be saved on the server
    later.</string>
   <string name="track_export_fail_media_shared">Could not export track.
    Please turn off external USB storage and try again.</string>
   <string name="track_export_fail">Could not export track.</string>
   <string name="track_export_io_fail">Could not write file.</string>
   <string name="commit_error">Commit failed</string>
   <string name="network_error_toast">Network currently unavailable. Please
       try again later.</string>
   <string name="account_holds_message">Summary:\n%1$s\n New Holds:\n %2$s\n
    Holds removed:\n %3$s\n There are two types of hold: public
    and full. While a full hold is active, you may not save any
    changes.  When a public hold is active, you may not save any public
    changes, but you can still save ratings and watch regions (private changes).
    \n\nHolds on computers affect anyone using that computer,
    logged in or not. If you believe a hold has been placed in error,
    please contact info@cyclopath.org with your concerns.</string>
   <string name="account_holds_title">Account Holds</string>
   <string name="account_no_holds">None</string>
   <string name="account_hold">There is a hold placed on your
      account\n</string>
   <string name="device_hold">There is a hold placed on this device\n</string>
   <string name="account_hold_removed">A hold on your account has been
      removed\n</string>
   <string name="device_hold_removed">A hold on this device has been
      removed\n</string>
   <string name="public_account_hold_expires">Public account hold, expires:
      %1$s\n</string>
   <string name="public_account_hold_expired">Public account hold, expired:
      %1$s\n</string>
   <string name="full_account_hold_expires">Full account hold, expires:
      %1$s\n</string>
   <string name="full_account_hold_expired">Full account hold, expired:
      %1$s\n</string>
   <string name="public_device_hold_expires">Public device hold, expires:
      %1$s\n</string>
   <string name="public_device_hold_expired">Public device hold, expired:
      %1$s\n</string>
   <string name="full_device_hold_expires">Full device hold, expires:
      %1$s\n</string>
   <string name="full_device_hold_expired">Full device hold, expired:
      %1$s\n</string>
   <string name="saving_ban_title">Account Hold</string>
   <string name="saving_ban_msg">There is currently a hold on this account.
       You cannot currently save any changes</string>
   <string name="route_finder">Find Route</string>
   <string name="route_finder_from">From:</string>
   <string name="route_finder_to">To:</string>
   <string name="route_finder_slider_distance">Distance</string>
   <string name="route_finder_slider_bikeability">Bikeability</string>
   <string name="route_finder_remember">Save these settings.</string>
   <string name="route_finder_btn">Find Route</string>
   <string name="route_finder_location_not_available">
      Current location cannot be resolved.</string>
   <string name="route_finder_from_not_validated">
      From address cannot be empty.</string>
   <string name="route_finder_to_not_validated">
      To address cannot be empty.</string>
   <string name="route_finder_other_not_validated">
      Address cannot be empty if \'other\' selected.</string>
   <string name="current_location">My Location</string>
   <string name="custom_location">Specified Location</string>
   <string name="route_share_progress_dialog_content">Generating link to route.
   </string>
   <string name="route_share_progress_dialog_title">Sharing route.</string>
   <string name="route_share_error">Unable to share route.</string>
   <string name="route_share_create_link_btn">Create Link</string>
   <string name="route_share_share_btn">Share</string>
   <string name="gwis_geocode_fail">Can\'t locate address(es)</string>
   <string name="address_choose">Choose Address</string>
   <string name="address_choose_starting">The starting location is ambiguous.
      Please choose one:</string>
   <string name="address_choose_ending">The ending location is ambiguous.
      Please choose one:</string>
   <string name="address_choose_other">Other:</string>
   <string name="route_finder_error">Can\'t find route.</string>
   <string name="directions">Directions</string>
   <string name="directions_back_to_map_btn">Map</string>
   <string name="route_finder_progress_dialog_title">Finding Route</string>
   <string name="track_editor_discard">Discard</string>
   <string name="track_editor_save">Save</string>
   <string name="about_copyright">Copyright 2006-2011 Regents of
    the\nUniversity of Minnesota</string>
   <string name="about_grouplens">Developed and maintained\nby the GroupLens
    Research\nLab at the University\nof Minnesota.</string>
   <string name="about_version_colon">Version:</string>
   <string name="about_credits_colon">Credits:</string>
   <string name="user_agreement_btn_text">I have read and agree to the terms 
   of service.</string>
   <string name="terms_of_service">Terms of Service</string>
   <string name="agreement_intro">In order to use Cyclopath Mobile,
    you must understand and agree to the following:</string>
   <string name="agreement1"><ul><li>Cyclopath is a research project at the
    University of Minnesota.</li></ul></string>
   <string name="agreement2"><ul><li>When you use Cyclopath Mobile,
    information, including your location, will be recorded on our servers. We
    use this information to improve the Cyclopath user experience and to
    advance our research."</li></ul></string>
   <string name="agreement3"><ul><li>We will never share private data that
    will let you be identified.</li></ul></string>
   <string name="item_details_ratings">Bikeability:</string>
   <string name="item_details_tags">Tags:</string>
   <string name="item_details_notes">Notes:</string>
   <string name="item_details_loading">Loading&#8230;</string>
   <string name="note_details">Note Details</string>
   <string name="item_details_edit">Edit</string>
   <string name="item_discard">Discard</string>
   <string name="item_name_hint">unnamed</string>
   <string name="item_add_tag">+ Add Tag</string>
   <string name="item_add_tag_hint">new tag</string>
   <string name="item_add_note_hint">new note</string>
   <string name="item_add_note">+ Add Note</string>
   <string name="note_hint">Write note here</string>
   <string name="note_done">Done</string>
   <string name="help_exp">Help us Test</string>
</resources>