<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2006-2011 Regents of the University of Minnesota.
   For licensing terms, see the file LICENSE.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
   <item android:id="@+id/start_record"
         android:icon="@drawable/menu_record"
         android:title="@string/start" />
   <item android:id="@+id/stop_record"
         android:icon="@drawable/menu_stop"
         android:title="@string/stop" />
   <item android:id="@+id/find_route"
         android:icon="@drawable/ic_menu_directions"
         android:title="@string/find_route" />
   <item android:id="@+id/my_location"
         android:icon="@drawable/menu_mylocation"
         android:title="@string/my_location" />
   <item android:id="@+id/manage_tracks"
         android:icon="@drawable/menu_list_tracks"
         android:title="@string/manage_tracks" />
   <item android:id="@+id/route_library"
         android:icon="@drawable/ic_menu_archive"
         android:title="@string/route_library" />
   <item android:id="@+id/login"
         android:icon="@drawable/ic_menu_cc"
         android:title="@string/login" />
   <item android:id="@+id/clear_map"
         android:icon="@drawable/menu_stop"
         android:title="@string/clear_map" />
   <item android:id="@+id/aerial_tiles"
         android:icon="@android:drawable/ic_menu_mapmode"
         android:title="@string/aerial_tiles" >
      <!-- "aerial tiles" submenu -->
      <menu>
         <group android:id="@+id/tile_options"
                android:checkableBehavior="single">
         </group>
      </menu>
   </item>
   <item android:title="@string/help_exp" 
         android:id="@+id/help"></item>
   <item android:title="@string/about" 
         android:id="@+id/about"></item>
</menu>