<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2006-2011 Regents of the University of Minnesota.
   For licensing terms, see the file LICENSE.-->
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
  <item android:title="@string/show_track"
                  android:id="@+id/show_track"></item>
            <item android:title="@string/view_track_details"
                  android:id="@+id/view_track_details"></item>
            <item android:title="@string/add_track_to_account"
                  android:id="@+id/add_track_owner"></item>
            <item android:title="@string/save_track_gpx"
                  android:id="@+id/save_track_gpx"></item>
            <item android:title="@string/delete_track"
                  android:id="@+id/delete_track"></item>
            <item android:title="@string/conflate_track"
                  android:id="@+id/conflate_track"></item>
</menu>
