<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2006-2011 Regents of the University of Minnesota.
   For licensing terms, see the file LICENSE.-->
<ScrollView>
<TableLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_height="wrap_content"
  android:layout_width="wrap_content"
  android:stretchColumns="2">
  <TableRow>
    <ImageView
      android:layout_column="1"
      android:src="@drawable/ic_launcher"
      android:layout_gravity="center" />
    <LinearLayout
      android:layout_column="2"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:orientation="vertical">
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/app_name"
        android:textSize="30sp" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/about_copyright"
        android:textSize="10sp" />
    </LinearLayout>
  </TableRow>

  <View
    android:layout_height="2dip" />

  <TableRow>
    <TextView
      android:paddingLeft="10dip"
      android:paddingRight="10dip"
      android:layout_column="1"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/about_credits_colon"
      android:textSize="20sp" />
    <LinearLayout
      android:layout_column="2"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:orientation="vertical">
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/about_grouplens"
        android:textSize="15sp" />
    </LinearLayout>
  </TableRow>

  <View
    android:layout_height="2dip" />

  <TableRow>
    <TextView
      android:paddingLeft="10dip"
      android:paddingRight="10dip"
      android:layout_column="1"
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:text="@string/about_version_colon"
      android:textSize="20sp" />
    <TextView
      android:layout_height="wrap_content"
      android:id="@+id/about_version"
      android:layout_width="wrap_content"
      android:textSize="20sp" />
  </TableRow>

  <View
    android:layout_height="2dip" />
<Button android:text="@string/terms_of_service"
     android:id="@+id/terms_of_service"
     android:layout_width="fill_parent" 
     android:layout_height="wrap_content">
  </Button>

</TableLayout>
</ScrollView>