<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2006-2011 Regents of the University of Minnesota.
   For licensing terms, see the file LICENSE.-->
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <ImageView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:src="@drawable/banner_background"
    android:scaleType="fitXY"></ImageView>
  <ScrollView 
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:orientation="vertical"
      android:paddingTop="20dip"
      android:paddingBottom="20dip"
      android:paddingLeft="10dip"
      android:paddingRight="10dip">
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/agreement_intro"
        android:layout_marginBottom="10dip"
        android:textColor="#000000"
        android:textSize="18dip" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/agreement1"
        android:textColor="#000000"
        android:textSize="18dip" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/agreement2"
        android:textColor="#000000"
        android:textSize="18dip" />
      <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/agreement3"
        android:textColor="#000000"
        android:textSize="18dip" />
      <TextView
        android:id="@+id/terms_link"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginTop="10dip"
        android:textColor="#000000"
        android:textSize="18dip" />
      <Button
        android:id="@+id/agree_button"
        android:text="@string/user_agreement_btn_text"
        android:paddingBottom="10dip"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:layout_gravity="center_horizontal"/>
    </LinearLayout>
  </ScrollView>
</FrameLayout>