<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2006-2013 Regents of the University of Minnesota.
   For licensing terms, see the file LICENSE.-->
   
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
<TextView android:id="@+id/item_name"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="30dp"
          android:textColor="#FFFFFF"
          android:text="@string/note_details" />
<ScrollView
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
<LinearLayout
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  <TextView android:id="@+id/note_contents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="25dp"
            android:textColor="#FFFFFF"
            android:text="" />
  <EditText android:id="@+id/note_contents_edit"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dp"
            android:text="" 
            android:visibility="gone"
            android:inputType="textMultiLine"
            android:hint="@string/note_hint"/>
  
  <LinearLayout
    android:id="@+id/bottom_btns"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:gravity="center"
    android:visibility="gone">
    <Button
      android:id="@+id/discard_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/item_discard"
      android:minWidth="150dp" />
    <Button
      android:id="@+id/done_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/note_done"
      android:minWidth="150dp" />
  </LinearLayout>
</LinearLayout>
</ScrollView>
</LinearLayout>
